# rust-threadpool

./: CLAUDE.md  Cargo.toml  add_dark_mode.sh  benchmark.sh  plot_benchmark.gp
cpp-version/: Makefile  bench  bench.cpp
src/: bench.rs  lib.rs  main.rs  pool.rs
src/pools/: mod.rs  v1_simple.rs  v1_spinlock.rs  v2_simple_batched.rs  v3_simple_chunked.rs  v4_condvar_completion.rs  v5_chunked_range.rs  v6_condvar_completion.rs
