[package]
name = "rust-threadpool"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bench-v1-spinlock"
path = "src/bin/bench_v1_spinlock.rs"

[[bin]]
name = "bench-v2-spinlock-batched"
path = "src/bin/bench_v2_spinlock_batched.rs"

[[bin]]
name = "bench-v3-condvar"
path = "src/bin/bench_v3_condvar.rs"

[[bin]]
name = "bench-v4-condvar-batched"
path = "src/bin/bench_v4_condvar_batched.rs"

[[bin]]
name = "bench-v5-condvar-chunked"
path = "src/bin/bench_v5_condvar_chunked.rs"

[[bin]]
name = "bench-v6-condvar-completion"
path = "src/bin/bench_v6_condvar_completion.rs"

[profile.release]
debug = "line-tables-only"

[dependencies]
itertools = "0.14.0"

