[package]
name = "rust-threadpool"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bench-v1-simple"
path = "src/bin/bench_v1_simple.rs"

[[bin]]
name = "bench-v2-simple-batched"
path = "src/bin/bench_v2_simple_batched.rs"

[[bin]]
name = "bench-v3-simple-chunked"
path = "src/bin/bench_v3_simple_chunked.rs"

[[bin]]
name = "bench-v4-condvar-completion"
path = "src/bin/bench_v4_condvar_completion.rs"

[profile.release]
debug = "line-tables-only"

[dependencies]
itertools = "0.14.0"

